[package]
name = "testwindowtabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "impl-debug",
    "impl-default",
    "libloaderapi",
    "uxtheme",
    "wincon",
    "winerror",
    "wingdi",
    "winuser",
]}