[package]
name = "testwindowtabs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "impl-debug",
    "impl-default",
    "libloaderapi",
    "uxtheme",
    "wincon",
    "winerror",
    "wingdi",
    "winuser",
]}