[package]
name = "testwindowtabs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "impl-debug",
    "impl-default",
    "libloaderapi",
    "uxtheme",
    "wincon",
    "winerror",
    "wingdi",
    "winuser",
    "d2d1",
]}

[build-dependencies]
embed-resource = "1.6"